2009-04-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Jobs.py:
	* pycvsanaly2/extensions/Metrics.py:

	Use cat instead of checkout/update to get the contents of files in
	metrics extension. Multiple cat command can run in parallel which
	improves performance quite a lot.
	
2009-04-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Fix --version command line option.
	
2009-04-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Paths in different branches are now considered as different
	files. That was obvious with SVN because branches are directories,
	but in CVS and Git exactly the same path can be in different
	branches.
	
2009-04-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Do not save caches to disk on every database commit since it's a
	very heavy operation, do it only once at the end of the parsing
	process.
	
2009-04-17  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/ExtensionsManager.py:

	Import ExtensionUnknownError exception.
	
2009-04-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* NEWS:
	* help/doc/version.texi:
	* pycvsanaly2/_config.py:

	Release 2.0.0
	
2009-04-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-04-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* MANIFEST.in:

	Add missing files.
	
2009-04-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Add configuration file Chapter.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:
	* help/doc/figs/db_schema.png:

	Add an image of the database schema to the documentation.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation.
	
2009-03-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* NEWS:
	* pycvsanaly2/_config.py:
